# canislink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  VERSION
.github/workflows/: ci.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/canislink/portal/: MainActivity.java
android/app/src/main/res/values/: strings.xml
crates/bond/: Cargo.toml
crates/bond/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_init.sql
crates/db/src/: lib.rs  memory.rs  sqlite.rs
crates/device-auth/: Cargo.toml
crates/device-auth/src/: lib.rs
crates/media-signal/: Cargo.toml
crates/media-signal/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/presence/: Cargo.toml
crates/presence/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  mcu.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
deploy/: Dockerfile  docker-compose.yml
deploy/coturn/: README.md  turnserver.conf
deploy/dev-ca/: README.md
docs/architecture/: canislink-summary.md  canislink-system-architecture.md
docs/features/: 01-presence.md  02-call-invite.md  03-session-accept.md  04-session-end.md  05-policy-steward.md  06-media-ready-config-again.md  07-alpha-ship.md
docs/lab/: ANDROID_CAMERA.md  ANTICIPATED_GAPS.md  DEFINITION_OF_DONE.md  DUAL_ANDROID.md  LAB_KIT.md  LOCAL_EXPERIMENT.md  android-e2e-report.json  dual-android-e2e-report.json  experiment-report.json  two-terminal-test-plan.md  welfare-protocol.md
docs/protocols/: edge-ipc.md  mcu-uart.md  session-fsm.md
docs/runbooks/: alpha-ship.md
edge/canis-edge/: Cargo.toml
edge/canis-edge/src/: lib.rs  main.rs
edge/canis-health/: Cargo.toml
edge/canis-media/: Cargo.toml
edge/canis-media/src/: main.rs
edge/canis-sense/: Cargo.toml
edge/canis-sense/src/: lib.rs  main.rs
firmware/mcu/: README.md  canis_mcu_reference.c
firmware/mcu-emu/: Cargo.toml
firmware/mcu-emu/src/: lib.rs  main.rs
hardware/bom/: prototype.csv
hardware/electronics/: lure_led.md  presence_mat.md  session_status.md
hardware/enclosure/: README.md  button_pad.scad  lure_bezel.scad  terminal_base.scad
portal-web/: app.js  index.html  styles.css
scripts/: android_e2e.sh  dual_android_e2e.sh  lab_webrtc.sh  local_experiment.sh  start_canis_avd.sh
services/device-api/: Cargo.toml
services/device-api/src/: events.rs  ice.rs  main.rs
services/policy-worker/: Cargo.toml
services/policy-worker/src/: main.rs
services/signaling/: Cargo.toml
services/signaling/src/: main.rs
services/steward-api/: Cargo.toml
services/steward-api/src/: main.rs
services/telemetry-ingest/: Cargo.toml
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: call_invite_full_chain.rs  device_ws_push.rs  fail_paths.rs  ice_config.rs  presence_full_chain.rs  session_accept_full_chain.rs  ship_base_full_chain.rs
tools/lab-experiment/: Cargo.toml
tools/lab-experiment/src/: main.rs
tools/loadtest/: Cargo.toml
tools/provision-device/: Cargo.toml
tools/sim-dog/: Cargo.toml
tools/sim-dog/src/: main.rs
tools/steward/: Cargo.toml
tools/steward/src/: main.rs
