[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/session",
    "crates/policy",
    "crates/bond",
    "crates/presence",
    "crates/device-auth",
    "crates/media-signal",
    "crates/telemetry",
    "crates/db",
    "services/device-api",
    "services/signaling",
    "services/steward-api",
    "services/policy-worker",
    "services/telemetry-ingest",
    "edge/canis-edge",
    "edge/canis-media",
    "edge/canis-sense",
    "edge/canis-health",
    "firmware/mcu-emu",
    "tools/sim-dog",
    "tools/provision-device",
    "tools/loadtest",
    "tools/steward",
    "tools/lab-experiment",
    "tests/e2e",
]
default-members = [
    "crates/protocol",
    "crates/session",
    "crates/policy",
    "crates/presence",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vinybrun/canislink"
authors = ["CanisLink Contributors"]
rust-version = "1.88"

[workspace.dependencies]
protocol = { path = "crates/protocol" }
session = { path = "crates/session" }
policy = { path = "crates/policy" }
bond = { path = "crates/bond" }
presence = { path = "crates/presence" }
device-auth = { path = "crates/device-auth" }
media-signal = { path = "crates/media-signal" }
telemetry = { path = "crates/telemetry" }
db = { path = "crates/db" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util", "fs", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros", "ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
futures-util = "0.3"
webrtc = "0.11"
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"

tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "6"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
parking_lot = "0.12"
rand = "0.8"
