[package]
name = "db"
description = "Data stores (in-memory presence, bonds, invites)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
protocol = { workspace = true }
bond = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
