[package]
name = "db"
description = "In-memory data stores for CanisLink alpha"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
protocol = { workspace = true }
bond = { workspace = true }
policy = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
