[package]
name = "device-auth"
description = "Device identity and auth (dev shared-secret; mTLS later)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
protocol = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
hex = "0.4"
