[package]
name = "presence"
description = "Presence sensor fusion and debounce"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
protocol = { workspace = true }
serde = { workspace = true }
