[package]
name = "canis-edge"
description = "CanisLink edge agent (presence + call)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "canis_edge"
path = "src/lib.rs"

[[bin]]
name = "canis-edge"
path = "src/main.rs"

[dependencies]
protocol = { workspace = true }
presence = { workspace = true }
canis-sense = { path = "../canis-sense" }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
