[package]
name = "canis-media"
description = "WebRTC media plane (datachannel portal proof + ICE)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "canis-media"
path = "src/main.rs"

[dependencies]
protocol = { workspace = true }
media-signal = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
webrtc = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
