[package]
name = "mcu-emu"
description = "Host-side MCU emulator (UART sense + buttons)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "mcu_emu"
path = "src/lib.rs"

[[bin]]
name = "mcu-emu"
path = "src/main.rs"

[dependencies]
protocol = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
