[package]
name = "signaling"
description = "WebRTC signaling rooms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "signaling"
path = "src/main.rs"

[dependencies]
media-signal = { workspace = true }
protocol = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
