[package]
name = "e2e"
description = "End-to-end integration tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
protocol = { workspace = true }
device-auth = { workspace = true }
db = { workspace = true }
presence = { workspace = true }
bond = { workspace = true }
session = { workspace = true }
policy = { workspace = true }
canis-edge = { path = "../../edge/canis-edge" }
canis-sense = { path = "../../edge/canis-sense" }
mcu-emu = { path = "../../firmware/mcu-emu" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
